docs: 替换前端异常文章链接

--- a/其他.md
+++ b/其他.md
@@ -3,9 +3,7 @@
 * [前端性能优化](#前端性能优化)
 
 ## 前端异常监控
-[前端异常监控](https://blog.csdn.net/screaming/article/details/51726150)
-
-
+[前端性能和错误监控](https://github.com/woai3c/Front-end-articles/blob/master/monitor.md)
 
 ## Ascii、GBK、UTF、Unicode
 * Ascii（1个字节1个字符）
