--- a/前端安全.md
+++ b/前端安全.md
@@ -48,13 +48,15 @@ https://baike.baidu.com/item/XSS%E6%94%BB%E5%87%BB/954065?fr=aladdin
 CSRF（Cross-site request forgery）跨站请求伪造，也被称为“One Click Attack”或者Session Riding，通常缩写为CSRF或者XSRF，是一种对网站的恶意利用。尽管听起来像跨站脚本（XSS），但它与XSS非常不同，XSS利用站点内的信任用户，而CSRF则通过伪装来自受信任用户的请求来利用受信任的网站。与XSS攻击相比，CSRF攻击往往不大流行（因此对其进行防范的资源也相当稀少）和难以防范，所以被认为比XSS更具危险性。
 
 ### 特点
-* 依靠用户标识危害网站
-* 利用网站对用户标识的信任
-* 欺骗用户的浏览器发送HTTP请求给目标站点
-* 另外可以通过IMG标签会触发一个GET请求，可以利用它来实现CSRF攻击。
+* 攻击一般发起在第三方网站，而不是被攻击的网站。被攻击的网站无法防止攻击发生。
+* 攻击利用受害者在被攻击网站的登录凭证，冒充受害者提交操作；而不是直接窃取数据。
+* 整个过程攻击者并不能获取到受害者的登录凭证，仅仅是“冒用”。
+* 跨站请求可以用各种方式：图片URL、超链接、CORS、Form提交等等。部分请求方式可以直接嵌入在第三方论坛、文章中，难以进行追踪。
 
 ### 防御
-* 通过referer、token或者验证码来检测用户提交。
+* 通过referer、token、Cookie 的 SameSite 属性来检测用户提交。
 * 尽量不要在页面的链接中暴露用户隐私信息。
 * 对于用户修改删除等操作最好都使用post操作 。
 * 避免全站通用的cookie，严格设置cookie的域。
+
+[前端安全系列之二：如何防止CSRF攻击？](https://juejin.im/post/5bc009996fb9a05d0a055192)
