--- a/其他.md
+++ b/其他.md
@@ -3,7 +3,7 @@
 * [前端异常监控](#前端异常监控)
 * [Ascii、GBK、UTF、Unicode](#AsciiGBKUTFUnicode)
 * [前端性能优化](#前端性能优化)
-* [rpc远程服务调用](#rpc远程服务调用)
+* [rpc远程过程调用](#rpc远程过程调用)
 
 ## 前端异常监控
 [前端性能和错误监控](https://github.com/woai3c/Front-end-articles/blob/master/monitor.md)
@@ -24,7 +24,7 @@ https://www.zhihu.com/question/23374078/answer/69732605
 [前端性能优化 24 条建议（2020）](https://github.com/woai3c/Front-end-articles/blob/master/performance.md)
 
 #### [回到顶部](#其他)
-## rpc远程服务调用
+## rpc远程过程调用
 [谁能用通俗的语言解释一下什么是 RPC 框架？](https://www.zhihu.com/question/25536695)
 
 #### [回到顶部](#其他)
