--- a/其他.md
+++ b/其他.md
@@ -4,6 +4,7 @@
 * [Ascii、GBK、UTF、Unicode](#AsciiGBKUTFUnicode)
 * [前端性能优化](#前端性能优化)
 * [rpc远程过程调用](#rpc远程过程调用)
+* [浏览器工作原理](#浏览器工作原理)
 
 ## 前端异常监控
 [前端性能和错误监控](https://github.com/woai3c/Front-end-articles/blob/master/monitor.md)
@@ -24,7 +25,14 @@ https://www.zhihu.com/question/23374078/answer/69732605
 [前端性能优化 24 条建议（2020）](https://github.com/woai3c/Front-end-articles/blob/master/performance.md)
 
 #### [回到顶部](#其他)
+
 ## rpc远程过程调用
 [谁能用通俗的语言解释一下什么是 RPC 框架？](https://www.zhihu.com/question/25536695)
+
+#### [回到顶部](#其他)
+
+## 浏览器工作原理
+* [浏览器的工作原理：新式网络浏览器幕后揭秘](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/)
+* [图解浏览器的基本工作原理](https://zhuanlan.zhihu.com/p/47407398)
 
 #### [回到顶部](#其他)
