--- a/前端安全.md
+++ b/前端安全.md
@@ -1,5 +1,6 @@
 * [XSS](#XSS)
 * [CSRF](#CSRF)
+* [CSP](#CSP)
 
 ## XSS
 ### XSS是什么
@@ -57,3 +58,6 @@ CSRF（Cross-site request forgery）跨站请求伪造，也被称为“One Clic
 * 避免全站通用的cookie，严格设置cookie的域。
 
 [前端安全系列之二：如何防止CSRF攻击？](https://juejin.im/post/5bc009996fb9a05d0a055192)
+
+## CSP
+[内容安全策略( CSP )](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/CSP)
