--- a/其他.md
+++ b/其他.md
@@ -5,6 +5,7 @@
 * [前端性能优化](#前端性能优化)
 * [rpc远程过程调用](#rpc远程过程调用)
 * [浏览器工作原理](#浏览器工作原理)
+* [单点登录](#单点登录)
 
 ## 前端异常监控
 [前端性能和错误监控](https://github.com/woai3c/Front-end-articles/blob/master/monitor.md)
@@ -31,3 +32,5 @@ https://www.zhihu.com/question/23374078/answer/69732605
 * [浏览器的工作原理：新式网络浏览器幕后揭秘](https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/)
 * [图解浏览器的基本工作原理](https://zhuanlan.zhihu.com/p/47407398)
 
+## 单点登录
+[单点登录（SSO）看这一篇就够了](https://developer.aliyun.com/article/636281)
